--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "floatphp/exceptions",
   "type": "library",
-  "description": "Exceptions lib for floatPHP",
-  "keywords": ["php","micro-framework","framework","PSR","ORM","jakiboy"],
+  "description": "Exceptions for floatPHP",
+  "keywords": ["floatphp","micro-framework","framework","PSR","ORM","jakiboy"],
   "homepage": "https://www.floatphp.com/",
   "license": "MIT",
   "authors": [
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.3"
   },
   "autoload": {
     "psr-4" : {
