--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "floatphp/exceptions",
-  "version" : "1.0.0-beta",
+  "version" : "1.0.0",
   "type": "library",
   "description": "Exceptions for floatPHP",
   "keywords": ["floatphp","micro-framework","framework","PSR","ORM","jakiboy"],
@@ -19,7 +19,7 @@
     }
   ],
   "require": {
-    "php": ">=7.3"
+    "php": ">=5.6"
   },
   "autoload": {
     "psr-4" : {
