--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "autoload": {
     "psr-4" : {
-      "floatPHP\\Exceptions\\" : "src/"
+      "FloatPHP\\Exceptions\\" : "src/"
     }
   }
 }
