--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "floatphp/exceptions",
-  "version" : "1.0.0",
+  "version" : "1.0.1",
   "type": "library",
-  "description": "Exceptions for floatPHP",
+  "description": "FloatPHP Exceptions Components",
   "keywords": ["floatphp","micro-framework","framework","PSR","ORM","jakiboy"],
   "homepage": "https://www.floatphp.com/",
   "license": "MIT",
