--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,16 @@
 {
   "name": "floatphp/exceptions",
-  "version" : "1.0.2",
+  "version" : "1.1.0",
   "type": "library",
   "description": "FloatPHP Exceptions Components",
   "keywords": ["floatphp","micro-framework","framework","PSR","ORM","jakiboy"],
-  "homepage": "https://www.floatphp.com/",
+  "homepage": "https://floatphp.com",
   "license": "MIT",
   "authors": [
     {
       "name": "Jihad Sinnaour",
       "email": "mail@jihadsinnaour.com",
       "role": "Founder"
-    },
-    {
-      "name": "Softgine",
-      "email": "e-mailing@soft-gine.com",
-      "role": "Developer"
     }
   ],
   "require": {
