--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,22 @@
 {
   "name": "floatphp/exceptions",
-  "version" : "1.4.0",
+  "version": "1.5.0",
   "type": "library",
   "description": "FloatPHP Exceptions Components",
-  "keywords": ["floatphp","micro-framework","framework","PSR","ORM","jakiboy"],
+  "keywords": [
+    "floatphp",
+    "micro-framework",
+    "framework",
+    "PSR",
+    "ORM",
+    "jakiboy"
+  ],
   "homepage": "https://floatphp.com",
   "license": "MIT",
   "authors": [
     {
       "name": "Jihad Sinnaour",
-      "email": "mail@jihadsinnaour.com",
+      "email": "me@jihadsinnaour.com",
       "role": "Founder"
     }
   ],
@@ -17,8 +24,8 @@
     "php": ">=8.2"
   },
   "autoload": {
-    "psr-4" : {
-      "FloatPHP\\Exceptions\\" : "src/"
+    "psr-4": {
+      "FloatPHP\\Exceptions\\": "src/"
     }
   }
 }
